--- a/templates/administrateur/GestionUtilisateurs/AjoutUtilisateur.html.twig
+++ b/templates/administrateur/GestionUtilisateurs/AjoutUtilisateur.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Ajout utilisateur{% endblock %}
 
 {% block body %}
-<link rel="stylesheet" href="{{ asset('CSS/AjoutUserAdmin.css') }}">
+<link rel="stylesheet" href="{{ asset('CSS/Admin.css') }}">
     <h1>Ajouter un nouvel Utilisateur</h1>
 
     {{ include('administrateur/GestionUtilisateurs/FormAjoutUtilisateur.html.twig') }}
