--- a/templates/administrateur/GestionUtilisateurs/DetailUtilisateur.html.twig
+++ b/templates/administrateur/GestionUtilisateurs/DetailUtilisateur.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Détails Utilisateurs{% endblock %}
 
 {% block body %}
-<link rel="stylesheet" href="{{ asset('CSS/DetailsUtilisateurs.css') }}">
+<link rel="stylesheet" href="{{ asset('CSS/Admin.css') }}">
     <h1>Detail de l'utilisateur séléctionné</h1>
 
     <div class="details_utilisateurs">
