--- a/templates/administrateur/GestionUtilisateurs/HistoriqueCommandesUtilisateurs.html.twig
+++ b/templates/administrateur/GestionUtilisateurs/HistoriqueCommandesUtilisateurs.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
  <link rel="stylesheet" href={{ asset('CSS/Admin.css') }}>
-    <h1>📦 Historique des commandes</h1>
+    <h1> Historique des commandes</h1>
 
 <div class='Droite'>
             <div class="ListeUtilisateurs">
@@ -24,7 +24,7 @@
 
 
 
-    <table class="table table-striped">
+    <table class="liste_commandes">
         <thead>
             <tr>
                 <th>Référence</th>
@@ -58,7 +58,7 @@
                     <td>{{ nbArticles }}</td>
                     <td>{{ total }}</td>
                     <td>
-                        <a href="{{ path('admin_commande_detail', { id: commande.id }) }}" class="btn btn-primary btn-sm">
+                        <a href="{{ path('admin_commande_detail', { id: commande.id }) }}" class="">
                             Voir
                         </a>
                     </td>
