--- a/templates/administrateur/GestionUtilisateurs/formModif.html.twig
+++ b/templates/administrateur/GestionUtilisateurs/formModif.html.twig
@@ -1,6 +1,6 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
     <div class="modifier">
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button class="btn-modifier">{{ button_label|default('Save') }}</button>
     </div>
 {{ form_end(form) }}
