--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,7 @@
 			{# CSS personnalisé #}
 			<link rel="stylesheet" href="{{ asset('CSS/Footer.css') }}"> 
             <link rel="stylesheet" href="{{ asset('CSS/Header.css') }}">
+            <link rel="stylesheet" href="{{ asset('CSS/test.css') }}">
 		{# Fin CSS Perso #}
 		{% endblock %}
 	</head>
