--- a/templates/administrateur/BoiteReception/NouveauMessage.html.twig
+++ b/templates/administrateur/BoiteReception/NouveauMessage.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+<link rel="stylesheet" href="{{ asset('CSS/Admin.css') }}">
     <h1>Envoyer un message à un utilisateur</h1>
 
     {{ form_start(form) }}
@@ -9,6 +10,7 @@
         {{ form_row(form.destinataire) }}
         {{ form_row(form.pieceJointe) }}
         <button class="btn btn-primary">Envoyer</button>
+        
         <a href="{{ path('CompteUtilisateur_BoiteReception') }}" class="btn btn-outline-secondary">Retour</a>
     {{ form_end(form) }}
 {% endblock %}
