--- a/templates/administrateur/GestionProduits/AjoutProduit.html.twig
+++ b/templates/administrateur/GestionProduits/AjoutProduit.html.twig
@@ -3,12 +3,16 @@
 {% block title %}Nouveau Produit{% endblock %}
 
 {% block body %}
+<link rel="stylesheet" href="{{ asset('CSS/Admin.css') }}">
 <h1>Ajouter un produit</h1>
 
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn btn-success">Enregistrer</button>
+    <button class="btn btn-success">Ajouter</button>
 {{ form_end(form) }}
 
+<div class="Retour">
 <a href="{{ path('Administrateur_ListeProduits') }}" class="btn btn-secondary mt-2">Retour à la liste</a>
+</div>
+
 {% endblock %}
