--- a/templates/administrateur/GestionProduits/DetailProduit.html.twig
+++ b/templates/administrateur/GestionProduits/DetailProduit.html.twig
@@ -3,12 +3,17 @@
 {% block title %}Détail produit{% endblock %}
 
 {% block body %}
+<link rel="stylesheet" href="{{ asset('CSS/Admin.css') }}">
 <h1>{{ produit.nomProduit }}</h1>
-
-<p><strong>Prix :</strong> {{ produit.prix }} €</p>
-<p><strong>Stock :</strong> {{ produit.stock }}</p>
-<p><strong>Description :</strong> {{ produit.description }}</p>
-
+<div class="detailProduit">
+    <p class="prixProduit"><strong>Prix :</strong> {{ produit.prix }} €</p>
+    <p class="stockProduit"><strong>Stock :</strong> {{ produit.stock }}</p>
+    <p class="descriptionProduit"><strong>Description :</strong> {{ produit.description }}</p>
+</div>
+<div class="Modifier">
 <a href="{{ path('Administrateur_ModifierProduit', {id: produit.id}) }}" class="btn btn-warning">Modifier</a>
+</div>
+<div class="Retour">
 <a href="{{ path('Administrateur_ListeProduits') }}" class="btn btn-secondary">Retour</a>
+</div>
 {% endblock %}
